Fix team member drawer by making bios hidden by default, and added a close icon

--- a/layouts/grid/style.scss
+++ b/layouts/grid/style.scss
@@ -174,6 +174,34 @@
     }
 }
 
+/* Team Member Drawer */
+#team-members-bio-drawer {
+    .btn-close {
+        background: none;
+        border: none;
+        padding: 0;
+        margin: 0;
+        line-height: 1;
+        position: absolute;
+        right: 15px;
+        top: 15px;
+
+        svg {
+            &:hover {
+                color: var(--bs-primary);
+            }
+        }
+    }
+
+    .offcanvas-body {
+        padding-top: 35px;
+    }
+
+    .team-member {
+        display: none;
+    }
+}
+
 /* Artist Profiles */
 .layout-grid.artist-profiles {
     div[class*=col].grid {
